--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-generator-tag": "^0.2.0",
     "hexo-permalink-pinyin": "^1.1.0",
     "hexo-prism-plugin": "^2.3.0",
+    "hexo-related-popular-posts": "^4.0.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-stylus": "^0.3.3",
