--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -209,6 +209,7 @@ links:
   杰克部落: https://www.renjikai.com
   Vigorous Pro: https://www.wevg.org
   Piggy: https://blog.piggy.moe
+  Colin: https://blog.valderfield.com/
   
 
 # Table of Contents in the Sidebar
