--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -210,6 +210,8 @@ links:
   Vigorous Pro: https://www.wevg.org
   Piggy: https://blog.piggy.moe
   Colin: https://blog.valderfield.com/
+  苏卡卡的有底洞: https://blog.skk.moe/
+  Balthild’s Blog: https://qaq.cat/
   
 
 # Table of Contents in the Sidebar
