--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Leo
 subtitle: Leo's cottage.
-description: Yet another blog
+description: 建议麦当劳
 keywords: c++ python machine_learning php golang
 author: Leo
 language: zh-CN
