--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -212,6 +212,7 @@ links:
   Colin: https://blog.valderfield.com/
   苏卡卡的有底洞: https://blog.skk.moe/
   Balthild’s Blog: https://qaq.cat/
+  小熊の小站: https://blog.hailres.xyz/
   
 
 # Table of Contents in the Sidebar
