new post self instruct

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Leo
 subtitle: Leo's cottage.
 description: 建议麦当劳
-keywords: c++ python machine_learning php golang
+keywords: c++ python machine_learning nlp
 author: Leo
 language: zh-CN
 timezone: Asia/Shanghai
