--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "hexo-prism-plugin": "^2.3.0",
     "hexo-related-popular-posts": "^4.0.0",
     "hexo-renderer-ejs": "1.0.0",
-    "hexo-renderer-marked": "3.0.0",
+    "hexo-renderer-markdown-it": "^6.0.1",
     "hexo-renderer-stylus": "1.1.0",
     "hexo-server": "1.0.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "markdown-it-katex": "^2.0.3"
   }
 }
