--- a/package.json
+++ b/package.json
@@ -3,27 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "5.4.2"
+    "version": "7.0.0-rc1"
   },
   "dependencies": {
-    "hexo": "5",
-    "hexo-deployer-git": "2.1.0",
-    "hexo-filter-mathjax": "^0.6.1",
-    "hexo-generator-archive": "1.0.0",
-    "hexo-generator-category": "1.0.0",
-    "hexo-generator-index": "1.0.0",
-    "hexo-generator-search": "^2.4.0",
+    "hexo": "7.0.0-rc1",
+    "hexo-deployer-git": "4.0.0",
+    "hexo-filter-mathjax": "^0.9.0",
+    "hexo-generator-archive": "2.0.0",
+    "hexo-generator-category": "2.0.0",
+    "hexo-generator-index": "3.0.0",
+    "hexo-generator-search": "^2.4.3",
     "hexo-generator-searchdb": "^1.4.1",
-    "hexo-generator-sitemap": "2.0.0",
-    "hexo-generator-tag": "1.0.0",
+    "hexo-generator-sitemap": "3.0.1",
+    "hexo-generator-tag": "2.0.0",
     "hexo-permalink-pinyin": "^1.1.0",
-    "hexo-prism-plugin": "^2.3.0",
     "hexo-related-popular-posts": "^5.0.0",
     "hexo-related-posts": "^1.5.1",
-    "hexo-renderer-ejs": "1.0.0",
-    "hexo-renderer-markdown-it": "^6.0.1",
-    "hexo-renderer-stylus": "1.1.0",
-    "hexo-server": "1.0.0",
+    "hexo-renderer-ejs": "2.0.0",
+    "hexo-renderer-markdown-it": "^7.0.0",
+    "hexo-renderer-stylus": "2.1.0",
+    "hexo-server": "3.0.0",
     "hexo-theme-next": "^8.15.0",
     "hexo-word-counter": "^0.1.0",
     "markdown-it-katex": "^2.0.3"
