--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,10 +28,13 @@ jobs:
     # Deploy hexo blog website.
     - name: Deploy
       id: deploy
-      uses: sma11black/hexo-action@v1.0.3
-      with:
-        deploy_key: ${{ secrets.DEPLOY_KEY }}
-        commit_msg: ${{ github.event.head_commit.message }}  # (or delete this input setting to use hexo default settings)
+      run: |
+        echo "${{ secrets.DEPLOY_KEY }}" > /root/.ssh/id_rsa
+        chmod 600 /root/.ssh/id_rsa
+        ./node_modules/.bin/hexo g -d -m "${{ github.event.head_commit.message }}"
+      # with:
+      #   deploy_key: 
+      #   commit_msg: ${{ github.event.head_commit.message }}
     # Use the output from the `deploy` step(use for test action)
     - name: Get the output
       run: |
