--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,6 +29,7 @@ jobs:
     - name: Deploy
       id: deploy
       run: |
+        mkdir /home/runner/.ssh
         echo "${{ secrets.DEPLOY_KEY }}" > /home/runner/.ssh/id_rsa
         chmod 600 /home/runner/.ssh/id_rsa
         ./node_modules/.bin/hexo g -d -m "${{ github.event.head_commit.message }}"
