--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,6 +42,6 @@ jobs:
         ls
         # Remove all files before they get copied from ../public/
         # so git can track files that were removed in the last commit
-        find . -path ./.git -prune -o -exec rm -rf {} \; 2> /dev/null
+        find . -path ./.git -prune -o -exec rm -rf {} \;
         cd ../
         ./node_modules/.bin/hexo g -d -m "${{ github.event.head_commit.message }}"
