--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "hexo": "7.0.0-rc1",
     "hexo-deployer-git": "4.0.0",
-    "hexo-filter-mathjax": "^0.9.0",
     "hexo-generator-archive": "2.0.0",
     "hexo-generator-category": "2.0.0",
     "hexo-generator-index": "3.0.0",
@@ -24,8 +23,7 @@
     "hexo-renderer-stylus": "2.1.0",
     "hexo-server": "3.0.0",
     "hexo-theme-next": "^8.15.0",
-    "hexo-word-counter": "^0.1.0",
-    "markdown-it-katex": "^2.0.3"
+    "hexo-word-counter": "^0.1.0"
   },
   "devDependencies": {
     "hexo-util": "^3.0.1"
