--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Leo
+title: Leo's blog
 subtitle: Leo's cottage.
 description: 建议麦当劳
 keywords: c++ python machine_learning nlp
