--- a/_config.next.yml
+++ b/_config.next.yml
@@ -182,10 +182,11 @@ links_settings:
 
 links:
   #Title: https://example.com
+  RalXYZ: https://blog.ralxyz.xyz
   杰克部落: https://www.renjikai.com/
   Vigorous Pro: https://www.wevg.org
   Piggy: https://blog.piggy.moe
-  Colin: https://blog.valderfield.com/
+  Colin: https://blog.co1in.me/
   苏卡卡的有底洞: https://blog.skk.moe/
   Balthild’s Blog: https://qaq.cat/
   小熊の小站: https://blog.hailres.xyz/
