--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,10 @@ on: [push]
 
 jobs:
   build:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     runs-on: ubuntu-latest
     name: A job to deploy blog.
     steps:
@@ -11,11 +15,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: true # Checkout private submodules(themes or something else).
-    - uses: actions/checkout@v3
-      with:
-        repository: leoleoasd/blog
-        path: .deploy_git
-        ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
       run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
@@ -28,20 +29,13 @@ jobs:
           ${{ runner.os }}-yarn-
     - name: Install Dependencies
       run: yarn install --frozen-lockfile --dev
-    # Deploy hexo blog website.
-    - name: Deploy
-      id: deploy
-      run: |
-        mkdir /home/runner/.ssh
-        echo "${{ secrets.DEPLOY_KEY }}" > /home/runner/.ssh/id_rsa
-        chmod 600 /home/runner/.ssh/id_rsa
-        git config --global user.email "blog_deployer@yuxuan.lu"
-        git config --global user.name "Yuxuan Lu"
-        # Initialize target with currently deployed files
-        cd .deploy_git
-        # Remove all files before they get copied from ../public/
-        # so git can track files that were removed in the last commit
-        shopt -s extglob
-        rm -r -- !(.git)
-        cd ../
-        ./node_modules/.bin/hexo g -d -m "${{ github.event.head_commit.message }}"
+    - name: Hexo build
+      run: yarn run hexo generate
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        # Upload entire repository
+        path: 'public'
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
